--- a/PhpFiles/description.css
+++ b/PhpFiles/description.css
@@ -44,6 +44,7 @@
   
   }
 section{
+  background-color: red;
     height: 70vh;
     display: flex;
 margin: auto;
@@ -57,7 +58,7 @@ box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 
 }
 .img_container{
     border-radius: 8px;
-    width: 30%;
+    /* width: 30%; */
     height: 500px;
     cursor: pointer;
     overflow: hidden;
@@ -69,9 +70,9 @@ height: 100%;
 object-fit: contain;
 
 }
-.text_container{
+/* .text_container{
     width: 40%; 
-}
+} */
 
 .text_container h1{
     font-size: 50px;
